# PSVita

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml
src/psvita/: __init__.py  config.py  ftp.py  mark_completed.py  reorder_livearea.py  sync.py
tests/: conftest.py  test_config.py  test_ftp.py  test_mark_completed.py  test_reorder_livearea.py  test_sync.py
