[project]
name = "psvita"
version = "0.1.0"
description = "CLI tools for managing a PS Vita game library backup."
requires-python = ">=3.12"
dependencies = [
    "pillow>=10.0",
    "pyyaml>=6.0",
]

[project.scripts]
mark-completed = "psvita.mark_completed:main"
reorder-livearea = "psvita.reorder_livearea:main"
sync-app = "psvita.sync:main_app"
sync-psp = "psvita.sync:main_psp"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/psvita"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/psvita --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["src/psvita"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true
